--- a/src/abn_tree_template.jade
+++ b/src/abn_tree_template.jade
@@ -7,11 +7,10 @@ ul.nav.nav-list.nav-pills.nav-stacked.abn-tree
     ng-class="'level-' + {{ row.level }} + (row.branch.selected ? ' active':'') + ' ' +row.classes.join(' ')"
     )
 
-    a(ng-click="user_clicks_branch(row.branch)")
+    a(ng-click="row.branch.expanded = !row.branch.expanded; user_clicks_branch(row.branch)")
 
       i.indented.tree-icon(
         ng-class="row.tree_icon"
-        ng-click="row.branch.expanded = !row.branch.expanded"
         ) 
 
       span.indented.tree-label {{ row.label }} 
